# screen-grabber

./: Cargo.toml  LICENSE  README.md  miao
src/: default.txt  draws_functions.rs  edit.rs  gui.rs  icons.rs  main.rs  screen.rs  wrapper_functions.rs
