[package]
name = "prova"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = "0.23.0"
egui_extras = "0.23.0"
screenshots = "0.8.3"
image = "0.24.7"
eframe = "0.20.1"
native-dialog = "0.6.4"
global-hotkey = "0.2.3"


[profile.dev]
opt-level = 2

[profile.release]
opt-level = 3