[package]
name = "prova"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = "0.23.0"
egui_extras = "0.23.0"
screenshots = "0.8.3"
image = "0.24.7"
eframe = "0.20.1"
native-dialog = "0.6.4"
global-hotkey = "0.2.3"
rfd = "0.12.1"
catppuccin-egui = "3.1.0"
chrono = "0.4.31"
winapi = { version = "0.3", features = ["winuser"] }
arboard = "3.3.0"


[profile.dev]
opt-level = 2

[profile.release]
opt-level = 3
