[package]
name = "prova"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = "0.24.0"
egui_extras = { version = "0.24.0", features = ["all_loaders"] }
screenshots = "0.8.3"
image = "0.24.7"
eframe = "0.24.0"
native-dialog = "0.6.4"
global-hotkey = "0.2.3"
lazy_static = "1.4.0"
rfd = "0.12.1"
catppuccin-egui = "3.1.0"
chrono = "0.4.31"
arboard = "3.3.0"
imageproc = "0.23.0"
rusttype = "0.9.3"

[profile.dev]
opt-level = 2

[profile.release]
opt-level = 3
